2007-09-03  Wakaba  <wakaba@suika.fam.cx>

	* error-description-source.xml: Updated.

2007-09-02  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Report document sections are now output by
	corresponding subroutines.

2007-08-26  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: New catalog macros |local-name| and |element-local-name|.

2007-08-11  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi, parser-manakai.cgi, parser.cgi: Use |Message::CGI::HTTP|
	instead of |SuikaWiki::Input::HTTP|.

2007-08-05  Wakaba  <wakaba@suika.fam.cx>

	* cc-interface.en.html: IMT |application/atom+xml| is added.
	Link to |cc-todo| is added.

2007-07-24  Wakaba  <wakaba@suika.fam.cx>

	* error-description.xml: Description for "after body", "bare etago",
	and "bogus end tag" are added.

2007-07-21  Wakaba  <wakaba@suika.fam.cx>

	* cc-style.css: Don't remove bullet of the document node
	in the document tree.  Don't collapse white space
	in the |code| elements.

	* cc.cgi: Put identifiers and class names into |code|
	element.
	(get_text): Template for attribute values are supported.

	* error-descriotion-source.en.xml: More error descriptions
	are included.  Use |{@}| attribute value insertion macro
	for errors in which it should be useful.

2007-07-17  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Output HTTP and HTML header before try to
	fetch the specified resource for usability.  Add
	tables, identifiers, and terms section to the TOC.
	Generate classes list.

2007-07-17  Wakaba  <wakaba@suika.fam.cx>

	* alert.png, error.png, info.png: New images.

	* LICENSE: New image file names are added.

	* cc-interface.en.html: Link to the style sheet is added.

	* cc-style.css: Duplicate identifiers and terms
	are decorated by icon.

	* cc.cgi: |h1| links to the interface page. 
	(#identifiers): New section.

	* error-description-source.en.xml: More error types are
	added.

2007-07-16  Wakaba  <wakaba@suika.fam.cx>

	* cc.cgi: Set |STDOUT| encoding as |utf8|.
	(htescape): Escape some more invisible characters.
