@@ -16,7 +16,7 @@ textarea {
 <body>
 <h1>Web Docunent Conformance Checker <em>(beta)</em></h1>
 
-<form action="cc/" method="post" accept-charset="utf-8">
+<form action="cc/#result-summary" method="post" accept-charset="utf-8">
 <p><label><code>Content-Type</code> 
 <select name="i">
 <option value="" selected>As specified</option>
@@ -29,7 +29,7 @@ textarea {
 
 <p><label><code>charset</code>
 <select name="charset">
-<option value="" selected">As specified</option>
+<option value="" selected>As specified</option>
 <option><code>ISO-2022-JP</code></option>
 <option><code>ISO-8859-1</code></option>
 <option><code>EUC-JP</code></option>
