@@ -186,6 +186,65 @@ code {
   white-space: pre-wrap;
 }
 
+.rfc2119 {
+  border-style: none;
+  text-transform: lowercase;
+  font-variant: small-caps;
+  font-style: normal;
+  text-decoration: none;
+  font-weight: normal;
+  font-family: sans-serif;
+}
+
+#result-summary table {
+  margin-left: auto;
+  margin-right: auto;
+  border: 3px solid #800080;
+  border-collapse: collapse;
+}
+
+#result-summary tbody, colgroup {
+  border: 3px solid #800080;
+}
+
+#result-summary th {
+  background-color: #fff0f0;
+  color: black;
+  font-weight: bolder;
+  font-family: sans-serif;
+}
+
+#result-summary th, #result-summary td {
+  border: 1px solid #800080;
+  padding: 0.2em 0.5em;
+  text-align: center;
+  empty-cells: show;
+}
+
+.uncertain td, p.uncertain {
+  background-color: #e1e1ff;
+  color: black;
+}
+
+.FAIL {
+  background-color: #ffcece;
+  color: black;
+}
+
+.SEE-RESULT {
+  background-color: #e1e1ff;
+  color: black;
+}
+
+.PASS {
+  background-color: #ddffdd;
+  color: black;
+}
+
+#result-para {
+  padding: 0.2em 1em;
+}
+
 /*
 
 Copyright 2007 Wakaba <w@suika.fam.cx>
@@ -193,6 +252,6 @@ Copyright 2007 Wakaba <w@suika.fam.cx>
 This library is free software; you can redistribute it
 and/or modify it under the same terms as Perl itself.
 
-$Date: 2007/09/03 14:30:46 $
+$Date: 2007/09/10 11:51:09 $
 
 */
