@@ -1,3 +1,7 @@
+2007-09-10  Wakaba  <wakaba@suika.fam.cx>
+
+	* cc.cgi, cc-style.css: Scoring support.
+
 2007-09-03  Wakaba  <wakaba@suika.fam.cx>
 
 	* error-description-source.xml: Updated.
